test/types/tuple/diten/overload_destructure_args.good
overload_destructure_args.chpl:14: error: ambiguous call 'foo(1, (int,(int,int)))'
overload_destructure_args.chpl:6: note: candidates are: foo(a: int, _tuple_arg_tmp1: _tuple)
overload_destructure_args.chpl:10: note:                 foo(a: int, _tuple_arg_tmp2: _tuple)
